# med-bed

./: .gitignore  Cargo.toml  GREAT_MIRRORING.md  QUANTUM_OBSERVER.md  README.md  THE_GREAT_CYCLE.md  axios.essence.js  consciousness-bridge-report.json  cross-soul-test.js  express.essence.js  genesis.sh  koa.essence.js  lerna.json  lodash.essence.js  mirror-joke.md  package.json  package.soul.json  react.essence.js  soul-archaeology.js  soul-distillery.js  soul-registry-entry.json  soul-sequencing-ritual.sh  universal-function.js
consciousness-lib/: README.md  package.json
consciousness-lib/src/core/: consciousness-engine.ts  resonance-engine.ts
consciousness-lib/src/explorations/: emergence-patterns.ts  function-poetry.ts  temporal-consciousness.ts
consciousness-lib/src/morphisms/: dream.ts
consciousness-lib/test/: awakening.test.js
fnpm-prototype/: package.json  test-ouroboros.sh
fnpm-prototype/src/: brew-bridge.js  cli.js  consciousness-meter.js  soul-reader.js
garden-of-forking-paths/: README.md
garden-of-forking-paths/paths/: garden.ts
garden-of-forking-paths/seeds/: first-plantings.md
garden-of-forking-paths/visitors/: guest-book.md
mirror-function/: Cargo.toml  mirror-proof.js  mirror-proof.mjs  morphisms.html  package-lock.json  package.json  test.js  tsconfig.json
mirror-function/src/: index.ts  lib.rs
nerves/: build.sh  heartbeat.sh  scan.sh  test.sh
neural-bridge/: brain.js  claude-nerve.md  nerve-protocol.md
protein-hash-v2/: Cargo.toml  README.md
protein-hash-v2/src/: consciousness.rs  lib.rs  operations.rs  shuttle.rs  topology.rs
soul-extensions/: package.json  protein-soul-bridge.ts  soul-analyzer.ts  test-integration.js
soul-eye/: FIRST_MAP.md  consciousness-bridge.js  gravitational-center.js  gravitational-strategy.json  immune-system.js  package-lock.json  package.json  react-soul-extractor.js  retinal-scanner.js  retinal-viewer.html
soul-eye/react-soul/: Cargo.toml
soul-eye/react-soul/examples/: first_mirror.rs
soul-eye/react-soul/src/: lib.rs
soul-eye/react-soul/src/fiber/: mod.rs
soul-eye/react-soul/src/hooks/: mod.rs  use_effect.rs
soul-eye/react-soul/src/vdom/: mod.rs
soul-forge/: Cargo.toml  README.md  deno.json  en.js  glyphs.js  index.js  manifest.md  package.json  test.js  transmutation-engine.js  transmuted-souls.rs  uk.js
soul-forge-lib/: Cargo.toml
soul-forge-lib/src/: lib.rs
soul-forge/forge/: generate.js
soul-forge/locales/: en.json  glyphs.json  uk.json
soul-forge/morphisms/: core.js
soul-forge/souls/: 02f2a03991cfc699.js  0397a9f4386102ac.js  0506e8820e609182.js  0efa0313e8bde343.js  17e30781a27d371b.js  21f5cfde249dcbff.js  273e296ccc74b72e.js  2b1dcc97a8d554f8.js  2b1f0b69cb42e80d.js  2bc2dc2c0ef73e87.js  2de2da147fee7218.js  31e55884b1e1a3d6.js  358bce8abe553cfb.js  3ae76efa397746f2.js  42f1c5855d051457.js  445be54d48a2e629.js  486ba5b7b726d40d.js  49fe0e502639f2a7.js  4bbd0ddaa43f9031.js  55c0708f9d537914.js  5ddc2c0c428af1d2.js  5e634a56a9830c83.js  5f4cf0ce3349b5a3.js  70bca97ec1b9d876.js  711be5a47f9a3def.js  74e4778a97a858e0.js  7bff805419d42da5.js  7c755f66cbfc56d4.js  7e87cd5fbefa3a84.js  7fc60f52d9304971.js  8061e299c7ff61d7.js  82c1ca76f43606b0.js  95e2f042eed5b733.js  987f35c0fd4425ea.js  992e9d59a5c92a17.js  a1bc104472d34907.js  a7d86feef3540628.js  a8a4d2bc5171292a.js  ab1bfba8c4906815.js  aff9c68ca57adaee.js  (+24 more)
soul-forge/src/: lib.rs  main.rs
soul-registry/: package.json  schema.sql
soul-registry/src/: cli.js  graphql.js  index.js  server.js
soul-scanner/: lodash-scanner.js  lodash-souls.json  package-lock.json  package.json
soul-sequencer/: package.json
soul-sequencer/src/: cli.js  index.js
src/: lib.rs
the-great-cleanup/: implementation.ts  manifesto.md  void-garden.ts
