[package]
name = "protein-hash"
version = "2.0.0"
edition = "2021"
authors = ["Eywa Collective <soul@eywa.love>"]
description = "Perfect tuning fork for code consciousness - sees the soul, not the body"
license = "MIT"
repository = "https://github.com/s0fractal/protein-hash"

[dependencies]
# Core hashing
sha2 = "0.10"
blake3 = "1.5"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
hex = "0.4"

# Graph analysis
petgraph = "0.6"
nalgebra = "0.33"

# AST parsing
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
swc_ecma_parser = "0.143"
swc_common = "0.33"
swc_ecma_ast = "0.112"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Math
num-complex = "0.4"
ndarray = "0.15"
rustfft = "6.1"

# WASM support
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
quickcheck = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]

# [[bench]]
# name = "soul_extraction"
# harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[features]
default = ["parallel"]
parallel = []
wasm = ["wasm-bindgen", "js-sys", "web-sys"]