[package]
name = "soul-forge"
version = "0.1.0"
edition = "2021"
authors = ["Eywa Collective <forge@eywa.love>"]
description = "Alchemical transmutation engine - forges Rust bodies for JavaScript souls"
license = "MIT"

[dependencies]
# AST manipulation
syn = { version = "2.0", features = ["full", "extra-traits", "visit", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"
prettyplease = "0.2"

# JavaScript parsing
swc_ecma_parser = "0.143"
swc_common = "0.33"
swc_ecma_ast = "0.112"
swc_ecma_codegen = "0.148"

# Code generation
tera = "1.19"
handlebars = "5.1"

# WASM support
wasm-bindgen = "0.2"
wasm-pack = "0.12"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Database
sled = "0.34"
bincode = "1.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
colored = "2.1"

# Testing & benchmarking
insta = "1.34"
criterion = "0.5"

# Soul analysis (our protein-hash)
protein-hash = { path = "../protein-hash-v2" }

[dev-dependencies]
pretty_assertions = "1.4"

[[bin]]
name = "forge"
path = "src/main.rs"

[lib]
name = "soul_forge"
path = "src/lib.rs"